pkg/language/parser/klang_parser.go
// Generated from Klang.g4 by ANTLR 4.7.

package parser // Klang
import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "':'", "'['", "']'", "'null'", "'||'", "'&&'", "'=='", "'!='", "'>'",
	"'<'", "'>='", "'<='", "'+'", "'-'", "'*'", "'/'", "'%'", "'^'", "'!'",
	"';'", "'='", "'('", "')'", "'{'", "'}'", "','", "'true'", "'false'", "'nil'",
	"'if'", "'else'", "'while'", "'log'", "'kubectl'", "'apply'", "'patch'",
	"'get'", "'replace'", "'delete'", "'-n'", "'--type'", "'-p'", "'-u'", "'-jsonpath'",
	"'load'", "'exit'", "'jsonSelect'", "'jsonEdit'", "'jsonDelete'", "'yamlSelect'",
	"'yamlEdit'", "'yamlDelete'", "'kubeJsonEdit'", "'kubeJsonDelete'", "'kubeYamlEdit'",
	"'kubeYamlDelete'", "'shellScript'", "'download'", "'sleep'", "'stepInfo'",
	"'filter'", "'pattern'",
}
var symbolicNames = []string{
	"", "", "", "", "", "OR", "AND", "EQ", "NEQ", "GT", "LT", "GTEQ", "LTEQ",
	"PLUS", "MINUS", "MULT", "DIV", "MOD", "POW", "NOT", "SCOL", "ASSIGN",
	"OPAR", "CPAR", "OBRACE", "CBRACE", "COMMA", "TRUE", "FALSE", "NIL", "IF",
	"ELSE", "WHILE", "LOG", "KUBECTL", "APPLY", "PATCH", "GET", "REPLACE",
	"DELETE", "NAMESPACE", "PATCHTYPE", "PATCHLOAD", "UPDATELOAD", "JSONPATH",
	"LOAD", "EXIT", "JSONSELECT", "JSONEDIT", "JSONDELETE", "YAMLSELECT", "YAMLEDIT",
	"YAMLDELETE", "KUBEJSONEDIT", "KUBEJSONDELETE", "KUBEYAMLEDIT", "KUBEYAMLDELETE",
	"SHELLSCRIPT", "DOWNLOAD", "SLEEP", "STEPINFO", "FILTER", "PATTERN", "ID",
	"NUMBER", "PATH", "RAW_STRING_LIT", "STRING", "COMMENT", "SPACE", "OTHER",
}

var ruleNames = []string{
	"parse", "block", "stat", "assignment", "shell_script", "json_edit_fn",
	"json_delete_fn", "yaml_edit_fn", "yaml_delete_fn", "kube_json_edit_fn",
	"kube_json_delete_fn", "kube_yaml_edit_fn", "kube_yaml_delete_fn", "sleep_fn",
	"exit_fn", "if_stat", "condition_block", "stat_block", "while_stat", "log",
	"kubectl_command", "download_fn", "json_select_fn", "yaml_select_fn", "load_fn",
	"stepInfo", "ns", "patch_type", "string_or_id", "resource", "kubernetes_object_config",
	"filter", "pattern", "expr", "atom", "json", "obj", "pair", "arr", "value",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type KlangParser struct {
	*antlr.BaseParser
}

func NewKlangParser(input antlr.TokenStream) *KlangParser {
	this := new(KlangParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "Klang.g4"

	return this
}

// KlangParser tokens.
const (
	KlangParserEOF            = antlr.TokenEOF
	KlangParserT__0           = 1
	KlangParserT__1           = 2
	KlangParserT__2           = 3
	KlangParserT__3           = 4
	KlangParserOR             = 5
	KlangParserAND            = 6
	KlangParserEQ             = 7
	KlangParserNEQ            = 8
	KlangParserGT             = 9
	KlangParserLT             = 10
	KlangParserGTEQ           = 11
	KlangParserLTEQ           = 12
	KlangParserPLUS           = 13
	KlangParserMINUS          = 14
	KlangParserMULT           = 15
	KlangParserDIV            = 16
	KlangParserMOD            = 17
	KlangParserPOW            = 18
	KlangParserNOT            = 19
	KlangParserSCOL           = 20
	KlangParserASSIGN         = 21
	KlangParserOPAR           = 22
	KlangParserCPAR           = 23
	KlangParserOBRACE         = 24
	KlangParserCBRACE         = 25
	KlangParserCOMMA          = 26
	KlangParserTRUE           = 27
	KlangParserFALSE          = 28
	KlangParserNIL            = 29
	KlangParserIF             = 30
	KlangParserELSE           = 31
	KlangParserWHILE          = 32
	KlangParserLOG            = 33
	KlangParserKUBECTL        = 34
	KlangParserAPPLY          = 35
	KlangParserPATCH          = 36
	KlangParserGET            = 37
	KlangParserREPLACE        = 38
	KlangParserDELETE         = 39
	KlangParserNAMESPACE      = 40
	KlangParserPATCHTYPE      = 41
	KlangParserPATCHLOAD      = 42
	KlangParserUPDATELOAD     = 43
	KlangParserJSONPATH       = 44
	KlangParserLOAD           = 45
	KlangParserEXIT           = 46
	KlangParserJSONSELECT     = 47
	KlangParserJSONEDIT       = 48
	KlangParserJSONDELETE     = 49
	KlangParserYAMLSELECT     = 50
	KlangParserYAMLEDIT       = 51
	KlangParserYAMLDELETE     = 52
	KlangParserKUBEJSONEDIT   = 53
	KlangParserKUBEJSONDELETE = 54
	KlangParserKUBEYAMLEDIT   = 55
	KlangParserKUBEYAMLDELETE = 56
	KlangParserSHELLSCRIPT    = 57
	KlangParserDOWNLOAD       = 58
	KlangParserSLEEP          = 59
	KlangParserSTEPINFO       = 60
	KlangParserFILTER         = 61
	KlangParserPATTERN        = 62
	KlangParserID             = 63
	KlangParserNUMBER         = 64
	KlangParserPATH           = 65
	KlangParserRAW_STRING_LIT = 66
	KlangParserSTRING         = 67
	KlangParserCOMMENT        = 68
	KlangParserSPACE          = 69
	KlangParserOTHER          = 70
)

// KlangParser rules.
const (
	KlangParserRULE_parse                    = 0
	KlangParserRULE_block                    = 1
	KlangParserRULE_stat                     = 2
	KlangParserRULE_assignment               = 3
	KlangParserRULE_shell_script             = 4
	KlangParserRULE_json_edit_fn             = 5
	KlangParserRULE_json_delete_fn           = 6
	KlangParserRULE_yaml_edit_fn             = 7
	KlangParserRULE_yaml_delete_fn           = 8
	KlangParserRULE_kube_json_edit_fn        = 9
	KlangParserRULE_kube_json_delete_fn      = 10
	KlangParserRULE_kube_yaml_edit_fn        = 11
	KlangParserRULE_kube_yaml_delete_fn      = 12
	KlangParserRULE_sleep_fn                 = 13
	KlangParserRULE_exit_fn                  = 14
	KlangParserRULE_if_stat                  = 15
	KlangParserRULE_condition_block          = 16
	KlangParserRULE_stat_block               = 17
	KlangParserRULE_while_stat               = 18
	KlangParserRULE_log                      = 19
	KlangParserRULE_kubectl_command          = 20
	KlangParserRULE_download_fn              = 21
	KlangParserRULE_json_select_fn           = 22
	KlangParserRULE_yaml_select_fn           = 23
	KlangParserRULE_load_fn                  = 24
	KlangParserRULE_stepInfo                 = 25
	KlangParserRULE_ns                       = 26
	KlangParserRULE_patch_type               = 27
	KlangParserRULE_string_or_id             = 28
	KlangParserRULE_resource                 = 29
	KlangParserRULE_kubernetes_object_config = 30
	KlangParserRULE_filter                   = 31
	KlangParserRULE_pattern                  = 32
	KlangParserRULE_expr                     = 33
	KlangParserRULE_atom                     = 34
	KlangParserRULE_json                     = 35
	KlangParserRULE_obj                      = 36
	KlangParserRULE_pair                     = 37
	KlangParserRULE_arr                      = 38
	KlangParserRULE_value                    = 39
)

// IParseContext is an interface to support dynamic dispatch.
type IParseContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsParseContext differentiates from other interfaces.
	IsParseContext()
}

type ParseContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyParseContext() *ParseContext {
	var p = new(ParseContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = KlangParserRULE_parse
	return p
}

func (*ParseContext) IsParseContext() {}

func NewParseContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ParseContext {
	var p = new(ParseContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = KlangParserRULE_parse

	return p
}

func (s *ParseContext) GetParser() antlr.Parser { return s.parser }

func (s *ParseContext) Block() IBlockContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IBlockContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IBlockContext)
}

func (s *ParseContext) EOF() antlr.TerminalNode {
	return s.GetToken(KlangParserEOF, 0)
}

func (s *ParseContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ParseContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ParseContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KlangListener); ok {
		listenerT.EnterParse(s)
	}
}

func (s *ParseContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KlangListener); ok {
		listenerT.ExitParse(s)
	}
}

func (p *KlangParser) Parse() (localctx IParseContext) {
	localctx = NewParseContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, KlangParserRULE_parse)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(80)
		p.Block()
	}
	{
		p.SetState(81)
		p.Match(KlangParserEOF)
	}

	return localctx
}

// IBlockContext is an interface to support dynamic dispatch.
type IBlockContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsBlockContext differentiates from other interfaces.
	IsBlockContext()
}

type BlockContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyBlockContext() *BlockContext {
	var p = new(BlockContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = KlangParserRULE_block
	return p
}

func (*BlockContext) IsBlockContext() {}

func NewBlockContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *BlockContext {
	var p = new(BlockContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = KlangParserRULE_block

	return p
}

func (s *BlockContext) GetParser() antlr.Parser { return s.parser }

func (s *BlockContext) AllStat() []IStatContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IStatContext)(nil)).Elem())
	var tst = make([]IStatContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IStatContext)
		}
	}

	return tst
}

func (s *BlockContext) Stat(i int) IStatContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IStatContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IStatContext)
}

func (s *BlockContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *BlockContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *BlockContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KlangListener); ok {
		listenerT.EnterBlock(s)
	}
}

func (s *BlockContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KlangListener); ok {
		listenerT.ExitBlock(s)
	}
}

func (p *KlangParser) Block() (localctx IBlockContext) {
	localctx = NewBlockContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, KlangParserRULE_block)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(86)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for (((_la-30)&-(0x1f+1)) == 0 && ((1<<uint((_la-30)))&((1<<(KlangParserIF-30))|(1<<(KlangParserWHILE-30))|(1<<(KlangParserLOG-30))|(1<<(KlangParserEXIT-30))|(1<<(KlangParserJSONEDIT-30))|(1<<(KlangParserJSONDELETE-30))|(1<<(KlangParserYAMLEDIT-30))|(1<<(KlangParserYAMLDELETE-30))|(1<<(KlangParserKUBEJSONEDIT-30))|(1<<(KlangParserKUBEJSONDELETE-30))|(1<<(KlangParserKUBEYAMLEDIT-30))|(1<<(KlangParserKUBEYAMLDELETE-30))|(1<<(KlangParserSLEEP-30)))) != 0) || _la == KlangParserID || _la == KlangParserOTHER {
		{
			p.SetState(83)
			p.Stat()
		}

		p.SetState(88)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IStatContext is an interface to support dynamic dispatch.
type IStatContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Get_OTHER returns the _OTHER token.
	Get_OTHER() antlr.Token

	// Set_OTHER sets the _OTHER token.
	Set_OTHER(antlr.Token)

	// IsStatContext differentiates from other interfaces.
	IsStatContext()
}

type StatContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
	_OTHER antlr.Token
}

func NewEmptyStatContext() *StatContext {
	var p = new(StatContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = KlangParserRULE_stat
	return p
}

func (*StatContext) IsStatContext() {}

func NewStatContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatContext {
	var p = new(StatContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = KlangParserRULE_stat

	return p
}

func (s *StatContext) GetParser() antlr.Parser { return s.parser }

func (s *StatContext) Get_OTHER() antlr.Token { return s._OTHER }

func (s *StatContext) Set_OTHER(v antlr.Token) { s._OTHER = v }

func (s *StatContext) Assignment() IAssignmentContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAssignmentContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IAssignmentContext)
}

func (s *StatContext) Json_edit_fn() IJson_edit_fnContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IJson_edit_fnContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IJson_edit_fnContext)
}

func (s *StatContext) Json_delete_fn() IJson_delete_fnContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IJson_delete_fnContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IJson_delete_fnContext)
}

func (s *StatContext) Yaml_edit_fn() IYaml_edit_fnContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IYaml_edit_fnContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IYaml_edit_fnContext)
}

func (s *StatContext) Yaml_delete_fn() IYaml_delete_fnContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IYaml_delete_fnContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IYaml_delete_fnContext)
}

func (s *StatContext) Kube_json_delete_fn() IKube_json_delete_fnContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IKube_json_delete_fnContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IKube_json_delete_fnContext)
}

func (s *StatContext) Kube_json_edit_fn() IKube_json_edit_fnContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IKube_json_edit_fnContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IKube_json_edit_fnContext)
}

func (s *StatContext) Kube_yaml_delete_fn() IKube_yaml_delete_fnContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IKube_yaml_delete_fnContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IKube_yaml_delete_fnContext)
}

func (s *StatContext) Kube_yaml_edit_fn() IKube_yaml_edit_fnContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IKube_yaml_edit_fnContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IKube_yaml_edit_fnContext)
}

func (s *StatContext) If_stat() IIf_statContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IIf_statContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IIf_statContext)
}

func (s *StatContext) While_stat() IWhile_statContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IWhile_statContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IWhile_statContext)
}

func (s *StatContext) Sleep_fn() ISleep_fnContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISleep_fnContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISleep_fnContext)
}

func (s *StatContext) Exit_fn() IExit_fnContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExit_fnContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExit_fnContext)
}

func (s *StatContext) Log() ILogContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ILogContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ILogContext)
}

func (s *StatContext) OTHER() antlr.TerminalNode {
	return s.GetToken(KlangParserOTHER, 0)
}

func (s *StatContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StatContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StatContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KlangListener); ok {
		listenerT.EnterStat(s)
	}
}

func (s *StatContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KlangListener); ok {
		listenerT.ExitStat(s)
	}
}

func (p *KlangParser) Stat() (localctx IStatContext) {
	localctx = NewStatContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, KlangParserRULE_stat)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(105)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case KlangParserID:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(89)
			p.Assignment()
		}

	case KlangParserJSONEDIT:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(90)
			p.Json_edit_fn()
		}

	case KlangParserJSONDELETE:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(91)
			p.Json_delete_fn()
		}

	case KlangParserYAMLEDIT:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(92)
			p.Yaml_edit_fn()
		}

	case KlangParserYAMLDELETE:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(93)
			p.Yaml_delete_fn()
		}

	case KlangParserKUBEJSONDELETE:
		p.EnterOuterAlt(localctx, 6)
		{
			p.SetState(94)
			p.Kube_json_delete_fn()
		}

	case KlangParserKUBEJSONEDIT:
		p.EnterOuterAlt(localctx, 7)
		{
			p.SetState(95)
			p.Kube_json_edit_fn()
		}

	case KlangParserKUBEYAMLDELETE:
		p.EnterOuterAlt(localctx, 8)
		{
			p.SetState(96)
			p.Kube_yaml_delete_fn()
		}

	case KlangParserKUBEYAMLEDIT:
		p.EnterOuterAlt(localctx, 9)
		{
			p.SetState(97)
			p.Kube_yaml_edit_fn()
		}

	case KlangParserIF:
		p.EnterOuterAlt(localctx, 10)
		{
			p.SetState(98)
			p.If_stat()
		}

	case KlangParserWHILE:
		p.EnterOuterAlt(localctx, 11)
		{
			p.SetState(99)
			p.While_stat()
		}

	case KlangParserSLEEP:
		p.EnterOuterAlt(localctx, 12)
		{
			p.SetState(100)
			p.Sleep_fn()
		}

	case KlangParserEXIT:
		p.EnterOuterAlt(localctx, 13)
		{
			p.SetState(101)
			p.Exit_fn()
		}

	case KlangParserLOG:
		p.EnterOuterAlt(localctx, 14)
		{
			p.SetState(102)
			p.Log()
		}

	case KlangParserOTHER:
		p.EnterOuterAlt(localctx, 15)
		{
			p.SetState(103)

			var _m = p.Match(KlangParserOTHER)

			localctx.(*StatContext)._OTHER = _m
		}
		fmt.Println("unknown char: " + (func() string {
			if localctx.(*StatContext).Get_OTHER() == nil {
				return ""
			} else {
				return localctx.(*StatContext).Get_OTHER().GetText()
			}
		}()))

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IAssignmentContext is an interface to support dynamic dispatch.
type IAssignmentContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsAssignmentContext differentiates from other interfaces.
	IsAssignmentContext()
}

type AssignmentContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyAssignmentContext() *AssignmentContext {
	var p = new(AssignmentContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = KlangParserRULE_assignment
	return p
}

func (*AssignmentContext) IsAssignmentContext() {}

func NewAssignmentContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *AssignmentContext {
	var p = new(AssignmentContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = KlangParserRULE_assignment

	return p
}
